Layout + inflate: Onboarding

--- a/res/layout/fragment_onboarding.xml
+++ b/res/layout/fragment_onboarding.xml
@@ -1,6 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    >
+    <RelativeLayout
+        android:id="@+id/lyt_onboarding_upper"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        >
+        <TextView
+            android:id="@+id/tv_onboaring_title"
+            android:layout_width="@dimen/onboaring_title_width"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="8dp"
+            android:layout_above="@id/tv_onboarding_subtitle"
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+            android:text="@string/tv_onboarding_title"
+            android:textSize="@dimen/h4"
+            android:textAlignment="center"
+            android:textStyle="bold"
+            ></TextView>
+        <TextView
+            android:id="@+id/tv_onboarding_subtitle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:layout_marginHorizontal="@dimen/onboarding_horizontal_margin"
+
+            android:text="@string/tv_onboarding_subtitle"
+            android:textSize="@dimen/h5"
+            ></TextView>
+        <Button
+            android:id="@+id/btn_onboarding_buat_pertemuan"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="@dimen/bottom_margin"
+
+            android:text="@string/btn_onboarding_buat_pertemuan"
+            ></Button>
+    </RelativeLayout>
+</FrameLayout>
