--- a/res/layout/fragment_doctor.xml
+++ b/res/layout/fragment_doctor.xml
@@ -1,6 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    >
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        >
+        <TextView
+            android:id="@+id/tv_daftar_dokter"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+            android:text="@string/tv_fragment_doctor_title"
+            android:textSize="@dimen/h4"
+            ></TextView>
+        <ListView
+            android:id="@+id/lst_foods"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tv_daftar_dokter"
+            ></ListView>
+        <ImageView
+            android:id="@+id/btn_add_doctor"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_margin="@dimen/bottom_margin"
+
+            android:background="@drawable/btn_round"
+            android:src="@android:drawable/ic_menu_add"
+            ></ImageView>
+    </RelativeLayout>
+</FrameLayout>
