--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -6,4 +6,5 @@
     <dimen name="onboarding_horizontal_margin">40dp</dimen>
     <dimen name="onboaring_title_width">200dp</dimen>
     <dimen name="bottom_margin">40dp</dimen>
+    <dimen name="lst_item_padding">12dp</dimen>
 </resources>
