--- a/res/layout/fragment_onboarding.xml
+++ b/res/layout/fragment_onboarding.xml
@@ -18,10 +18,10 @@
             android:layout_above="@id/tv_onboarding_subtitle"
 
             android:text="@string/tv_onboarding_title"
-            android:textSize="@dimen/h4"
             android:textAlignment="center"
             android:textStyle="bold"
             ></TextView>
+            <!--android:textSize="@dimen/h4"-->
         <TextView
             android:id="@+id/tv_onboarding_subtitle"
             android:layout_width="match_parent"
