--- a/res/layout/fragment_appointment_add.xml
+++ b/res/layout/fragment_appointment_add.xml
@@ -12,7 +12,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Appointment Fragment"/>
+            android:text="Appointment Add Fragment"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -65,12 +65,25 @@
                 android:layout_weight="0.5"
                 android:text="@string/date" />
 
-            <EditText
-                android:id="@+id/et_date"
+            <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.5"
-                android:hint="@string/date"/>
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/tv_date"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/date" />
+
+                <ImageView
+                    android:id="@+id/btn_date"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@android:drawable/ic_menu_my_calendar"/>
+
+            </LinearLayout>
+
 
         </LinearLayout>
 
@@ -85,12 +98,26 @@
                 android:layout_weight="0.5"
                 android:text="@string/time" />
 
-            <EditText
-                android:id="@+id/et_time"
+            <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.5"
-                android:hint="@string/time"/>
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/tv_time"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.5"
+                    android:hint="@string/time"/>
+
+                <ImageView
+                    android:id="@+id/btn_time"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@android:drawable/ic_menu_directions" />
+
+            </LinearLayout>
+
 
         </LinearLayout>
 
