--- a/res/layout/fragment_doctor.xml
+++ b/res/layout/fragment_doctor.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    >
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -22,16 +21,14 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/tv_daftar_dokter"
             ></ListView>
-        <ImageView
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/btn_add_doctor"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
             android:layout_alignParentEnd="true"
-            android:layout_margin="@dimen/bottom_margin"
-
-            android:background="@drawable/btn_round"
-            android:src="@android:drawable/ic_menu_add"
-            ></ImageView>
+            android:layout_alignParentBottom="true"
+            android:layout_margin="16dp"
+            android:backgroundTint="@color/purple_700"
+            app:srcCompat="@drawable/baseline_add_white_24"/>
     </RelativeLayout>
 </FrameLayout>
