--- a/res/layout/fragment_appointment_add.xml
+++ b/res/layout/fragment_appointment_add.xml
@@ -1,53 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_height="match_parent"
-    android:layout_width="match_parent">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical" >
+        android:orientation="vertical">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Appointment Add Fragment"/>
+            android:text="Appointment Add Fragment" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-           <TextView
+            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.5"
                 android:text="@string/doctor" />
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                >
-                <TextView
-                    android:id="@+id/tv_doctor_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Doctor"
-                    ></TextView>
-                <TextView
-                    android:id="@+id/tv_doctor_specialty"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    ></TextView>
-            </LinearLayout>
 
-            <!--<EditText
-                android:id="@+id/et_doctor"
+            <TextView
+                android:id="@+id/tv_doctor_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.5"
-                android:hint="@string/doctor"/>-->
+                android:text="Doctor" />
 
         </LinearLayout>
 
@@ -62,12 +43,11 @@
                 android:layout_weight="0.5"
                 android:text="@string/specialty" />
 
-            <EditText
-                android:id="@+id/et_specialty"
+            <TextView
+                android:id="@+id/tv_doctor_specialty"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.5"
-                android:hint="@string/specialty"/>
+                android:text="@string/specialty" />
 
         </LinearLayout>
 
@@ -97,7 +77,7 @@
                     android:id="@+id/btn_date"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@android:drawable/ic_menu_my_calendar"/>
+                    android:src="@android:drawable/ic_menu_my_calendar" />
 
             </LinearLayout>
 
@@ -125,7 +105,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="0.5"
-                    android:hint="@string/time"/>
+                    android:hint="@string/time" />
 
                 <ImageView
                     android:id="@+id/btn_time"
