--- a/res/layout/item_list_doctor.xml
+++ b/res/layout/item_list_doctor.xml
@@ -4,25 +4,31 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="@dimen/lst_item_padding"
-    android:orientation="horizontal"
-    >
+    android:orientation="horizontal">
+
     <TextView
         android:id="@+id/tv_doctor_name"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_weight="1"
+        android:layout_weight="0.45"
 
         android:text="@string/doctor"
-        android:textSize="@dimen/h5"
-        ></TextView>
+        android:textSize="@dimen/h5" />
+
     <TextView
         android:id="@+id/tv_doctor_specialty"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_weight="0.45"
 
-        android:textAlignment="textEnd"
         android:text="@string/specialty"
-        android:textSize="@dimen/h5"
-        ></TextView>
+        android:textSize="@dimen/h5" />
+
+    <ImageView
+        android:id="@+id/btn_delete"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_weight="0.1"
+        android:src="@android:drawable/ic_delete"/>
+
 </LinearLayout>
