--- a/res/layout/item_list_appointment.xml
+++ b/res/layout/item_list_appointment.xml
@@ -4,30 +4,67 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="@dimen/lst_item_padding"
-    android:orientation="horizontal">
+    android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/tv_doctor_name"
+    <LinearLayout
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/tv_patient_name"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="@string/patient_name"
+            android:textSize="@dimen/h5" />
+
+        <TextView
+            android:id="@+id/tv_patient_issues"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/patient_issues"
+            android:textSize="@dimen/h5" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/tv_doctor_name"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="@string/doctor"
+            android:textSize="@dimen/h5" />
+
+        <TextView
+            android:id="@+id/tv_doctor_specialty"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/specialty"
+            android:textSize="@dimen/h5" />
+
+        <TextView
+            android:id="@+id/tv_date"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/date"
+            android:textSize="@dimen/h5" />
+
+    </LinearLayout>
+
+    <ImageView
+        android:id="@+id/btn_delete"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:text="@string/doctor"
-        android:textSize="@dimen/h5" />
-
-    <TextView
-        android:id="@+id/tv_doctor_specialty"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="@string/specialty"
-        android:textSize="@dimen/h5" />
-
-    <TextView
-        android:id="@+id/tv_date"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="@string/date"
-        android:textSize="@dimen/h5" />
+        android:layout_weight="0.1"
+        android:src="@android:drawable/ic_delete"/>
 
 </LinearLayout>
