--- a/res/layout/item_list_doctor.xml
+++ b/res/layout/item_list_doctor.xml
@@ -3,32 +3,80 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="@dimen/lst_item_padding"
-    android:orientation="horizontal">
-
-    <TextView
-        android:id="@+id/tv_doctor_name"
+    android:orientation="horizontal"
+    android:padding="@dimen/dp_16px"
+    android:layout_marginBottom="@dimen/dp_8px"
+    android:background="@drawable/border"
+    >
+    <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_weight="0.45"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_weight="0.9"
+        >
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/dp_8px"
+            >
+            <TextView
+                android:id="@+id/tv_doctor_name"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
 
-        android:text="@string/doctor"
-        android:textSize="@dimen/h5" />
+                android:text="@string/doctor"
+                android:textSize="@dimen/h5"
+                android:textColor="@color/black"
+                android:textStyle="bold"
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginHorizontal="@dimen/dp_4px"
 
-    <TextView
-        android:id="@+id/tv_doctor_specialty"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_weight="0.45"
+                android:text="@string/stripe"
+                android:textSize="@dimen/h5"
+                ></TextView>
+            <TextView
+                android:id="@+id/tv_doctor_specialty"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
 
-        android:text="@string/specialty"
-        android:textSize="@dimen/h5" />
+                android:text="@string/specialty"
+                android:textSize="@dimen/h5"
+                android:textColor="@color/black"
+                />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            >
+            <ImageView
+                android:id="@+id/ic_phone"
+                android:layout_width="wrap_content"
+                android:layout_height="32dp"
+                android:src="@drawable/ic_baseline_call_24"
+                android:layout_marginRight="@dimen/dp_4px"
+                ></ImageView>
+            <TextView
+                android:id="@+id/tv_nomor_telpon"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
 
+                android:text="@string/nomor_telpon"
+                android:textSize="@dimen/subtitle"
+                android:textColor="@color/black"
+                ></TextView>
+        </LinearLayout>
+    </LinearLayout>
     <ImageView
         android:id="@+id/btn_delete"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:layout_weight="0.1"
-        android:src="@android:drawable/ic_delete"/>
-
+        android:src="@drawable/ic_baseline_delete_36"
+        />
 </LinearLayout>
