--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -7,4 +7,9 @@
     <dimen name="onboaring_title_width">200dp</dimen>
     <dimen name="bottom_margin">40dp</dimen>
     <dimen name="lst_item_padding">12dp</dimen>
+    <dimen name="dp_8px">10.667dp</dimen>
+    <dimen name="dp_16px">21.333dp</dimen>
+    <dimen name="subtitle">19sp</dimen>
+    <dimen name="dp_24px">32dp</dimen>
+    <dimen name="dp_4px">5.333dp</dimen>
 </resources>
