--- a/res/layout/item_list_appointment.xml
+++ b/res/layout/item_list_appointment.xml
@@ -3,68 +3,102 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="@dimen/lst_item_padding"
-    android:orientation="vertical">
-
+    android:orientation="horizontal"
+    android:padding="@dimen/dp_16px"
+    android:layout_marginBottom="@dimen/dp_8px"
+    android:background="@drawable/border"
+        >
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/tv_patient_name"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="@string/patient_name"
-            android:textSize="@dimen/h5" />
-
-        <TextView
-            android:id="@+id/tv_patient_issues"
+        android:orientation="vertical"
+        android:layout_weight="0.9"
+        >
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/patient_issues"
-            android:textSize="@dimen/h5" />
+            android:layout_marginBottom="@dimen/dp_8px"
+            >
+            <TextView
+                android:id="@+id/tv_doctor_name"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
 
+                android:text="@string/doctor"
+                android:textSize="@dimen/h5"
+                android:textColor="@color/black"
+                android:textStyle="bold"
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginHorizontal="@dimen/dp_4px"
+
+                android:text="@string/stripe"
+                android:textSize="@dimen/h5"
+                ></TextView>
+            <TextView
+                android:id="@+id/tv_doctor_specialty"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+
+                android:text="@string/specialty"
+                android:textSize="@dimen/h5"
+                android:textColor="@color/black"
+                />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            >
+            <ImageView
+                android:id="@+id/ic_calendar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginRight="@dimen/dp_4px"
+
+                android:src="@drawable/ic_baseline_calendar_today_24"
+                ></ImageView>
+            <TextView
+                android:id="@+id/tv_tanggal"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginRight="@dimen/dp_8px"
+                android:gravity="center_vertical"
+
+                android:text="@string/tanggal"
+                android:textSize="@dimen/subtitle"
+                android:textColor="@color/black"
+                ></TextView>
+            <ImageView
+                android:id="@+id/ic_jam"
+                android:layout_width="wrap_content"
+                android:layout_height="32dp"
+                android:layout_marginRight="@dimen/dp_4px"
+
+                android:src="@drawable/ic_baseline_access_time_24"
+                ></ImageView>
+            <TextView
+                android:id="@+id/tv_nomor_telpon"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+
+                android:text="@string/jam"
+                android:textSize="@dimen/subtitle"
+                android:textColor="@color/black"
+                ></TextView>
+        </LinearLayout>
     </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/tv_doctor_name"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="@string/doctor"
-            android:textSize="@dimen/h5" />
-
-        <TextView
-            android:id="@+id/tv_doctor_specialty"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/specialty"
-            android:textSize="@dimen/h5" />
-
-        <TextView
-            android:id="@+id/tv_date"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/date"
-            android:textSize="@dimen/h5" />
-
-    </LinearLayout>
-
     <ImageView
         android:id="@+id/btn_delete"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:layout_weight="0.1"
-        android:src="@android:drawable/ic_delete"/>
 
+        android:src="@drawable/ic_baseline_delete_36"
+        />
 </LinearLayout>
