--- a/res/layout/item_list_doctor.xml
+++ b/res/layout/item_list_doctor.xml
@@ -55,9 +55,11 @@
             <ImageView
                 android:id="@+id/ic_phone"
                 android:layout_width="wrap_content"
-                android:layout_height="32dp"
-                android:src="@drawable/ic_baseline_call_24"
+                android:layout_height="match_parent"
                 android:layout_marginRight="@dimen/dp_4px"
+                android:layout_gravity="center_vertical"
+
+                android:src="@drawable/ic_baseline_call_24"
                 ></ImageView>
             <TextView
                 android:id="@+id/tv_nomor_telpon"
@@ -77,6 +79,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_weight="0.1"
+
         android:src="@drawable/ic_baseline_delete_36"
         />
 </LinearLayout>
