--- a/res/layout/item_list_appointment.xml
+++ b/res/layout/item_list_appointment.xml
@@ -62,7 +62,7 @@
                 android:src="@drawable/ic_baseline_calendar_today_24"
                 ></ImageView>
             <TextView
-                android:id="@+id/tv_tanggal"
+                android:id="@+id/tv_date"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_marginRight="@dimen/dp_8px"
@@ -81,7 +81,7 @@
                 android:src="@drawable/ic_baseline_access_time_24"
                 ></ImageView>
             <TextView
-                android:id="@+id/tv_nomor_telpon"
+                android:id="@+id/tv_time"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center_vertical"
