--- a/res/layout/fragment_navigation.xml
+++ b/res/layout/fragment_navigation.xml
@@ -6,33 +6,80 @@
     android:background="@color/white">
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="200dp"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:paddingHorizontal="@dimen/dp_16px"
+            android:paddingTop="@dimen/dp_24px"
+            android:background="@color/primaryColor"
+            >
+
 
             <TextView
                 android:id="@+id/tv_home"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/home" />
+
+                android:text="@string/home"
+                android:textSize="@dimen/h5"
+                android:textStyle="bold"
+                android:textColor="@color/white"
+                />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/line"
+
+                android:layout_marginVertical="@dimen/dp_4px"
+                ></TextView>
 
             <TextView
                 android:id="@+id/tv_appointment"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/appointment" />
+
+                android:text="@string/appointment"
+                android:textSize="@dimen/h5"
+                android:textStyle="bold"
+                android:textColor="@color/white"
+                />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/line"
+                android:layout_marginVertical="@dimen/dp_4px"
+                ></TextView>
 
             <TextView
                 android:id="@+id/tv_doctor"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/doctor" />
+
+                android:text="@string/doctor"
+                android:textSize="@dimen/h5"
+                android:textStyle="bold"
+                android:textColor="@color/white"
+                />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/line"
+                android:layout_marginVertical="@dimen/dp_4px"
+                ></TextView>
 
             <TextView
                 android:id="@+id/tv_exit"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/exit" />
+
+                android:text="@string/exit"
+                android:textSize="@dimen/h5"
+                android:textStyle="bold"
+                android:textColor="@color/white"
+                />
 
         </LinearLayout>
 
