--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -12,4 +12,5 @@
     <dimen name="subtitle">19sp</dimen>
     <dimen name="dp_24px">32dp</dimen>
     <dimen name="dp_4px">5.333dp</dimen>
+    <dimen name="h6">26.667sp</dimen>
 </resources>
