--- a/res/layout/fragment_doctor.xml
+++ b/res/layout/fragment_doctor.xml
@@ -3,23 +3,28 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        >
+        android:layout_height="match_parent">
+
         <TextView
             android:id="@+id/tv_daftar_dokter"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
 
-            android:text="@string/tv_fragment_doctor_title"
+            android:fontFamily="sans-serif-condensed"
+            android:textStyle="bold"
+            android:textColor="@color/black"
+            android:text="@string/doctor_list"
             android:textSize="@dimen/h4"  />
+
         <ListView
             android:id="@+id/lst_foods"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/tv_daftar_dokter"
-            ></ListView>
+            android:layout_below="@+id/tv_daftar_dokter" />
+
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/btn_add_doctor"
             android:layout_width="wrap_content"
@@ -29,5 +34,7 @@
             android:layout_margin="16dp"
             android:backgroundTint="@color/purple_700"
             app:srcCompat="@drawable/baseline_add_white_24"/>
+
     </RelativeLayout>
+
 </FrameLayout>
