--- a/res/layout/item_list_doctor.xml
+++ b/res/layout/item_list_doctor.xml
@@ -6,19 +6,19 @@
     android:orientation="horizontal"
     android:padding="@dimen/dp_16px"
     android:layout_marginBottom="@dimen/dp_8px"
-    android:background="@drawable/border"
-    >
+    android:background="@drawable/border">
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_weight="0.9"
-        >
+        android:layout_weight="0.9">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/dp_8px"
-            >
+            android:layout_marginBottom="@dimen/dp_8px">
+
             <TextView
                 android:id="@+id/tv_doctor_name"
                 android:layout_width="wrap_content"
@@ -27,16 +27,16 @@
                 android:text="@string/doctor"
                 android:textSize="@dimen/h5"
                 android:textColor="@color/black"
-                android:textStyle="bold"
-                />
+                android:textStyle="bold" />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_marginHorizontal="@dimen/dp_4px"
 
                 android:text="@string/stripe"
-                android:textSize="@dimen/h5"
-                ></TextView>
+                android:textSize="@dimen/h5"/>
+
             <TextView
                 android:id="@+id/tv_doctor_specialty"
                 android:layout_width="wrap_content"
@@ -44,34 +44,35 @@
 
                 android:text="@string/specialty"
                 android:textSize="@dimen/h5"
-                android:textColor="@color/black"
-                />
+                android:textColor="@color/black" />
+
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            >
+            android:orientation="horizontal">
+
             <ImageView
                 android:id="@+id/ic_phone"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_marginRight="@dimen/dp_4px"
                 android:layout_gravity="center_vertical"
+                android:src="@drawable/ic_baseline_call_24"/>
 
-                android:src="@drawable/ic_baseline_call_24"
-                ></ImageView>
             <TextView
-                android:id="@+id/tv_nomor_telpon"
+                android:id="@+id/tv_phone_number"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center_vertical"
 
                 android:text="@string/nomor_telpon"
                 android:textSize="@dimen/subtitle"
-                android:textColor="@color/black"
-                ></TextView>
+                android:textColor="@color/black"/>
+
         </LinearLayout>
+
     </LinearLayout>
     <ImageView
         android:id="@+id/btn_delete"
