--- a/res/layout/fragment_appointment.xml
+++ b/res/layout/fragment_appointment.xml
@@ -6,22 +6,26 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:paddingTop="@dimen/dp_16px"
         >
         <TextView
             android:id="@+id/tv_my_appointment"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+
             android:text="@string/appointment_list"
-            android:textSize="@dimen/h4"
-            android:fontFamily="sans-serif-condensed"
+            android:textSize="@dimen/h5"
             android:textStyle="bold"
             android:textColor="@color/black"
+            android:textAlignment="center"
             ></TextView>
         <ListView
             android:id="@+id/lst_appointment"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/tv_my_appointment"
+            android:layout_marginTop="@dimen/dp_16px"
+            android:paddingHorizontal="@dimen/dp_16px"
             ></ListView>
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/btn_add_appointment"
@@ -29,8 +33,9 @@
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
-            android:layout_margin="16dp"
-            android:backgroundTint="@color/purple_700"
-            app:srcCompat="@drawable/baseline_add_white_24"/>
+            android:layout_margin="@dimen/button_margin"
+            android:backgroundTint="@color/primaryColor"
+            android:src="@drawable/ic_baseline_add_24_1"
+            />
     </RelativeLayout>
 </FrameLayout>
