--- a/res/layout/fragment_doctor.xml
+++ b/res/layout/fragment_doctor.xml
@@ -6,34 +6,41 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:paddingTop="@dimen/dp_16px"
+        >
 
         <TextView
             android:id="@+id/tv_daftar_dokter"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
 
-            android:fontFamily="sans-serif-condensed"
+            android:text="@string/doctor_list"
             android:textStyle="bold"
             android:textColor="@color/black"
-            android:text="@string/doctor_list"
-            android:textSize="@dimen/h4"  />
+            android:textAlignment="center"
+            android:textSize="@dimen/h5"
+            />
 
         <ListView
             android:id="@+id/lst_foods"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/tv_daftar_dokter" />
+            android:layout_below="@+id/tv_daftar_dokter"
+            android:layout_marginTop="@dimen/dp_16px"
+            android:paddingHorizontal="@dimen/dp_16px"
+            />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/btn_add_doctor"
+            android:id="@+id/btn_add_appointment"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
-            android:layout_margin="16dp"
-            android:backgroundTint="@color/purple_700"
-            app:srcCompat="@drawable/baseline_add_white_24"/>
+            android:layout_margin="@dimen/button_margin"
+            android:backgroundTint="@color/primaryColor"
+            android:src="@drawable/ic_baseline_add_24_1"
+            />
 
     </RelativeLayout>
 
