--- a/res/layout/fragment_appointment.xml
+++ b/res/layout/fragment_appointment.xml
@@ -7,6 +7,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:paddingTop="@dimen/dp_16px"
+        android:paddingHorizontal="@dimen/dp_24px"
+        android:paddingBottom="@dimen/dp_24px"
         >
         <TextView
             android:id="@+id/tv_my_appointment"
@@ -24,8 +26,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/tv_my_appointment"
-            android:layout_marginTop="@dimen/dp_16px"
-            android:paddingHorizontal="@dimen/dp_16px"
+            android:divider="@android:color/transparent"
+            android:dividerHeight="@dimen/dp_8px"
             ></ListView>
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/btn_add_appointment"
@@ -33,7 +35,6 @@
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
-            android:layout_margin="@dimen/button_margin"
             android:backgroundTint="@color/primaryColor"
             android:src="@drawable/ic_baseline_add_24_1"
             />
