--- a/res/layout/fragment_appointment_add.xml
+++ b/res/layout/fragment_appointment_add.xml
@@ -6,8 +6,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="@dimen/dp_8px"
-        android:layout_marginHorizontal="@dimen/dp_24px"
+        android:paddingTop="@dimen/dp_16px"
+        android:paddingHorizontal="@dimen/dp_24px"
+        android:paddingBottom="@dimen/dp_24px"
         android:orientation="vertical">
 
         <TextView
