--- a/res/layout/fragment_doctor.xml
+++ b/res/layout/fragment_doctor.xml
@@ -8,6 +8,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:paddingTop="@dimen/dp_16px"
+        android:paddingHorizontal="@dimen/dp_24px"
+        android:paddingBottom="@dimen/dp_24px"
         >
 
         <TextView
@@ -28,7 +30,9 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/tv_daftar_dokter"
             android:layout_marginTop="@dimen/dp_16px"
-            android:paddingHorizontal="@dimen/dp_16px" />
+            android:divider="@android:color/transparent"
+            android:dividerHeight="@dimen/dp_8px"
+            />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/btn_add_doctor"
@@ -36,9 +40,6 @@
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
-            android:layout_marginStart="@dimen/button_margin"
-            android:layout_marginTop="@dimen/button_margin"
-            android:layout_marginEnd="@dimen/button_margin"
             android:layout_marginBottom="@dimen/button_margin"
             android:backgroundTint="@color/primaryColor"
             android:src="@drawable/ic_baseline_add_24_1" />
