--- a/res/layout/fragment_doctor_picker.xml
+++ b/res/layout/fragment_doctor_picker.xml
@@ -23,6 +23,8 @@
         android:layout_height="match_parent"
         android:layout_marginTop="@dimen/dp_16px"
         android:paddingHorizontal="@dimen/dp_16px"
+        android:divider="@android:color/transparent"
+        android:dividerHeight="@dimen/dp_8px"
         />
 
 </FrameLayout>
